# ChangeLog for games-arcade/frozen-bubble
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.30 2008/12/06 22:13:35 mr_bones_ Exp $

*frozen-bubble-2.2.0 (06 Dec 2008)

  06 Dec 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +frozen-bubble-2.2.0.ebuild:
  version bump

  29 Sep 2008; Michael Sterrett <mr_bones_@gentoo.org>
  frozen-bubble-2.1.0.ebuild:
  better icon handling with modified patch from Pacho Ramos (bug #238966)

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> ChangeLog:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  26 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -files/frozen-bubble-1.0.0-editor-sdl-perl-2.patch,
  -files/frozen-bubble-1.0.0-sdl-perl-2.patch,
  -files/1.0.0-no-chainreaction.patch,
  -files/frozen-bubble-1.0.0-makefile.patch, -frozen-bubble-1.0.0-r6.ebuild:
  remove old 1.0 version

  07 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  frozen-bubble-2.1.0.ebuild:
  Stabilize for little endian arches and de-keyword for big endian arches.

*frozen-bubble-2.1.0 (28 Nov 2006)

  28 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +frozen-bubble-2.1.0.ebuild:
  Version bump.

  30 Oct 2006; Mike Frysinger <vapier@gentoo.org>
  frozen-bubble-2.0.0.ebuild:
  Add mini colourblind balls #153287 by Rickard Närström.

  29 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org>
  frozen-bubble-2.0.0.ebuild:
  add dep (bug #153271)

*frozen-bubble-2.0.0 (28 Oct 2006)

  28 Oct 2006; Mike Frysinger <vapier@gentoo.org>
  +files/frozen-bubble-2.0.0-build.patch, +frozen-bubble-2.0.0.ebuild:
  Version bump #153131 by Dobromir Stefanov.

  30 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  frozen-bubble-1.0.0-r6.ebuild:
  sdl-mixer must be built with mikmod support (bug #142138)

  30 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  frozen-bubble-1.0.0-r6.ebuild: