@@ -1,6 +1,6 @@
 DIST frozen-bubble-2.1.0.tar.bz2 19886184 RMD160 0d0b9c57aa609df48d1ea294f9f05979c8ceb279 SHA1 4fa45612e430f65d996b89959fdfbda9d629eb3e SHA256 efb6b72e1d3caa414c3b6591be2208c8c39e25b296cd4af295e5ada063e3bbe3
 DIST frozen-bubble-2.2.0.tar.bz2 20585572 RMD160 1bbe0163c28421c497979c85a98f64a98174c780 SHA1 df5a8c839a76fd662777925b2eb80fcb8adf3fa6 SHA256 dada92322ef3adb75df7a4270b2e76c572c3f8e42006ed3a5aaeefa68fcaa5b7
 EBUILD frozen-bubble-2.1.0.ebuild 2234 RMD160 06df285fc54fce2a830f9c043f3ee32b955965e4 SHA1 8760aa0b7287e13e711a25ed511776c8642be7f0 SHA256 3c931477a190611d2e42e72ba25aaf9d8cdd4eaf8c6975759786c791a8653918
-EBUILD frozen-bubble-2.2.0.ebuild 2268 RMD160 6c7cc4a196431e1b07e72e197bca9bbc86a7074f SHA1 0e54743ef063f226081ab314831795abdf3ef053 SHA256 2577b2158e0e3f19d39786c77311f8f7467a654fc8f6947c1c4fc05056426f77
-MISC ChangeLog 7862 RMD160 9568eb44d911fdf8880b05c2b8a0ef61fd653d6a SHA1 815d2045c3f3b1764a4fc02d380d2d234d28c2dd SHA256 6ef1f25f67dc9e34207fecf8ce20d0ac8b3366898f0e28450f98411cc8b16b6a
+EBUILD frozen-bubble-2.2.0.ebuild 1692 RMD160 2f37087e23836185d5566992f338e9d1f2ffe960 SHA1 0262f42f410f30cba0a27db9b4de4d4beeee6559 SHA256 d1c87b884c90b8014419b99fdd0e52e83dec61528cd347d4d515fa81fc75f640
+MISC ChangeLog 7977 RMD160 136da7e6eadc883efa1011af954f3b2c51e4f72c SHA1 73caf223cc26ad1cdac4ca1fc1b2e39f1543091f SHA256 ea47944066a7c642645bbf034628535761bd761052dd95c96b8466bec99bdf1f
 MISC metadata.xml 449 RMD160 b8f34def5d742659506da917a43d62bc670167af SHA1 a13893053f32b670f7ed6c49d666cb9631f49c11 SHA256 63337ec457363a86ff999264ec10ee614f5156160a57371d278122c167470602
