@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/frozen-bubble
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.30 2008/12/06 22:13:35 mr_bones_ Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.31 2009/01/09 21:14:43 mr_bones_ Exp $
+
+  09 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
+  frozen-bubble-2.2.0.ebuild:
+  EAPI=2; add use-based deps
 
 *frozen-bubble-2.2.0 (06 Dec 2008)
 
